# roz

./: .gitignore  .jscpd.json  .markdownlint-cli2.yaml  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  build.rs  deny.toml  mise.toml  typos.toml
.claude-plugin/: install.sh  marketplace.json  plugin.json
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: release.yml  test.yml
agents/: roz.md
design/: 00-overview.md  01-architecture.md  02-implementation.md  03-test-plan.md  04-ci.md
hooks/: hooks.json
scripts/: sync-plugin-version.sh
src/: config.rs  error.rs  lib.rs  main.rs  template.rs
src/cli/: clean.rs  context.rs  debug.rs  decide.rs  hook.rs  list.rs  mod.rs  stats.rs  trace.rs
src/core/: circuit_breaker.rs  hooks.rs  mod.rs  state.rs
src/hooks/: input.rs  mod.rs  output.rs  runner.rs
src/storage/: file.rs  memory.rs  mod.rs  traits.rs
templates/: block-v1.md
tests/: hook_flow.rs
